--- a/NotificationInANdroid/app/src/main/AndroidManifest.xml
+++ b/NotificationInANdroid/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.NotificationInAndroid"
         tools:targetApi="31">
+        <receiver android:name=".receiver.MyReceiver" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
