--- a/Notifications_in_Android/app/src/main/AndroidManifest.xml
+++ b/Notifications_in_Android/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         android:theme="@style/Theme.Notifications_in_Android"
         tools:targetApi="31">
         <receiver android:name=".receiver.MyReceiver" />
+        <receiver android:name=".receiver.MyReceiver2" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
