--- a/ForegroundServiceNotification/app/src/main/AndroidManifest.xml
+++ b/ForegroundServiceNotification/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,10 +14,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ForegroundServiceNotification"
         tools:targetApi="31">
+        <service
+            android:name=".service.MakeService"
+            android:exported="false"
+            android:stopWithTask="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/Theme.ForegroundServiceNotification">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
