settings and manifest

--- a/WeatherApp/app/src/main/AndroidManifest.xml
+++ b/WeatherApp/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
         android:roundIcon="@drawable/image"
         android:supportsRtl="true"
         android:theme="@style/Theme.WeatherApp"
-        tools:targetApi="31">
+    android:enableOnBackInvokedCallback="true"
+        tools:targetApi="tiramisu">
         <activity
             android:name=".MainActivity"
             android:exported="true"
